Bug 145616 - gmail website no longer works. I get the loading messages then nothing is displayed
Summary: gmail website no longer works. I get the loading messages then nothing is dis...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-05-18 10:30 UTC by Mark Eaton
Modified: 2007-05-27 12:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Eaton 2007-05-18 10:30:24 UTC
Version:           3.5.6 (using KDE KDE 3.5.6)
Installed from:    Ubuntu Packages
OS:                Linux

This has only just stopped working. If I set the user agent back to the default it all works (in the basic mode), but as soon as I change the agent to firefox it stops working. This only started happening today and happens on all my machines.

After logging in I see the usual red "loading" message in the corner which then dissappears and reappears several times as if the page is loading several times, then after a moment the page just goes blank.
Comment 1 Philip Rodrigues 2007-05-19 22:50:40 UTC
Maybe the problem that is fixed by http://www.kdedevelopers.org/node/2807 ?
Comment 2 Allan Sandfeld 2007-05-27 12:02:59 UTC
SVN commit 668694 by carewolf:

Gecko allows innerHTML on StyleElement. 
This fixes recent GMail when spoofing as Firefox

BUG:145616


 M  +1 -2      html_elementimpl.cpp  


--- trunk/KDE/kdelibs/khtml/html/html_elementimpl.cpp #668693:668694
@@ -182,7 +182,7 @@
           setHasClassList(l);
           setHasClass(true);
         } else {
-          setHasClassList(false);                 
+          setHasClassList(false);
           setHasClass(false);
         }
         break;
@@ -506,7 +506,6 @@
         case ID_COLGROUP:
         case ID_FRAMESET:
         case ID_HEAD:
-        case ID_STYLE:
         case ID_TABLE:
         case ID_TBODY:
         case ID_TFOOT: