Gecko allows innerHTML on StyleElement. This fixes recent GMail when spoofing as Firefox

BUG:145616

svn path=/trunk/KDE/kdelibs/; revision=668694