khtml/html/html_elementimpl.cpp
@@ -182,7 +182,7 @@ void HTMLElementImpl::parseAttribute(AttributeImpl *attr)
           setHasClassList(l);
           setHasClass(true);
         } else {
-          setHasClassList(false);                 
+          setHasClassList(false);
           setHasClass(false);
         }
         break;
@@ -506,7 +506,6 @@ DocumentFragment HTMLElementImpl::createContextualFragment( const DOMString &htm
         case ID_COLGROUP:
         case ID_FRAMESET:
         case ID_HEAD:
-        case ID_STYLE:
         case ID_TABLE:
         case ID_TBODY:
         case ID_TFOOT:
